
Changelog for 8.0.6

Collector:


DB:
    - option to create a custom CA for certificates
    - HASP drivers updated to 6.23
    - utility to update the license file
    - ability to change the license file form console
