@@ -1,0 +1,69 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>RCS Console Installer</title>
+    <script type="text/javascript" src="swfobject.js"></script>
+    <link href="style.css" rel="stylesheet" />
+</head>
+
+<body color="#FFFFFF">
+
+<div class="vc_out">
+	<div class="vc_mid">
+		<div class="vc_content">
+            <center>
+                <div id="flashcontent" style="width:215px; height:180px;">
+                    <strong>Please upgrade your Flash Player</strong>
+                    This is the content that would be shown if the user does not have Flash Player 6.0.65 or higher installed.
+                </div>
+            </center>
+		</div>
+	</div>
+</div>
+
+<script type="text/javascript">
+
+// version 9.0.115 or greater is required for launching AIR apps.
+
+var so = new SWFObject("AIRInstallBadge.swf", "Badge", "215", "180", "9.0.115", "#FFFFFF");
+so.useExpressInstall('expressinstall.swf');
+
+// these parameters are required for badge install:
+so.addVariable("airversion", "3.1"); // version of AIR runtime required
+so.addVariable("appname", "RCS Console"); // application name to display to the user
+so.addVariable("appurl", "CONSOLE_INSTALL_URL"); // absolute URL (beginning with http or https) of the application ".air" file
+
+// these parameters are required to support launching apps from the badge (but optional for install):
+so.addVariable("appid", "it.ht.rcs.console.Console"); // the qualified application ID (ex. com.gskinner.air.MyApplication)
+so.addVariable("pubid", ""); // publisher id
+
+// this parameter is required in addition to the above to support upgrading from the badge:
+so.addVariable("appversion", "CONSOLE_INSTALL_VERSION"); // AIR application version
+
+// these parameters are optional:
+so.addVariable("image", "RCS.jpg"); // URL for an image (JPG, PNG, GIF) or SWF to display in the badge (205px wide, 170px high)
+so.addVariable("appinstallarg", "installed from web"); // passed to the application when it is installed from the badge
+so.addVariable("applauncharg", "launched from web"); // passed to the application when it is launched from the badge
+so.addVariable("helpurl", "help.html"); // optional url to a page containing additional help, displayed in the badge's help screen
+so.addVariable("hidehelp", "false"); // hides the help icon if "true"
+so.addVariable("skiptransition", "false"); // skips the initial transition if "true"
+so.addVariable("titlecolor", "#00AAFF"); // changes the color of titles
+so.addVariable("buttonlabelcolor", "#00AAFF"); // changes the color of the button label
+so.addVariable("appnamecolor", "#00AAFF"); // changes the color of the application name if the image is not specified or loaded
+
+// these parameters allow you to override the default text in the badge:
+// supported strings: str_error, str_err_params, str_err_airunavailable, str_err_airswf, str_loading, str_install, str_launch, str_upgrade, str_close, str_launching, str_launchingtext, str_installing, str_installingtext, str_tryagain, str_beta3, str_beta3text, str_help, str_helptext
+so.addVariable("str_err_airswf", "<u>Running locally?</u><br/><br/>The AIR proxy swf won't load properly when this demo is run from the local file system."); // overrides the error text when the AIR proxy swf fails to load
+so.write("flashcontent");
+
+
+// ]]>
+
+</script>
+
+<!-- END EMBED CODE -->
+
+</body>
+</html>
+
