@@ -1,0 +1,16 @@
+.vc_out {
+	display: table;
+	position: absolute;
+	height: 100%;
+	width: 100%
+}
+
+.vc_mid {
+	display: table-cell;
+	vertical-align: middle
+}
+
+.vc_content {
+	margin-left: auto;
+	margin-right: auto;
+}
